	* xml.c: explicit check for the non-standard header files instead of
	  the global WITH_XML definition
	* xml.c, common.h: fixed compiler warnings

2018-08-19  Edward Hart <edward.dan.hart@gmail.com>

	* xml.c: new file, added for XML GENERATE

2018-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* coblocal.h, numeric.c (cob_decimal_init2): fixed compiler warning

2018-07-29  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: added defines for not yet implemented standard
	  I-O status values

2018-07-14  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (get_screen_item_line_and_col): fixed bug #514, where
	  length of elementary items with a LINE clause was ignored when
	  calculating the COL of subsequent items.

2018-07-13  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_ref_mod): display maximum size on overflow

2018-07-12  Ron Norman <rjn@inglenet.com>
	* call.c: Added cob_get_name_line to return source line of CALL
	          Added cob_field_value to copy field & set COB_FLAG_VALUE
	          Added cob_field_content to copy field & set COB_FLAG_CONTENT

2018-07-05  Ron Norman <rjn@inglenet.com>
	* coblocal.h,common.c: Added runtime.cfg options for COB_LS_SPLIT
	* fileio.c: Added checks for runtime.cfg options for split or truncate
	   LINE SEQUENTIAL records which are longer than expected

2018-07-04  Ron Norman <rjn@inglenet.com>
	* common.h: Added COB_MF_LS_SPLIT flag
	* fileio.c:
	  Added check for IO_fdname having 'ls_split' for 
	  Micro Focus compatible LINE SEQUENTIAL files.
	  When a record is longer than the program was compiled for
	  Micro Focus will return the extra data as an extra record.
	  This is the result for when IO_fdname has ls_split.
	  For 'GC' format LINE SEQUENTIAL or for 'nols_split' a long
	  record will get truncated and skip to the next LF.

2018-07-04  Edward Hart <edward.dan.hart@gmail.com>

	* move.c (cob_move_display_to_edited): fixed bug #220 again; this time