@@ -3789,6 +3789,8 @@ relative_read (cob_file *f, cob_field *k, const int read_opts)
 				return COB_STATUS_51_RECORD_LOCKED;
 			case EDEADLK:
 				return COB_STATUS_52_DEAD_LOCK;
+			case ENOLCK:
+				return COB_STATUS_53_MAX_LOCKS;
 			default:
 				return COB_STATUS_30_PERMANENT_ERROR;
 			}
@@ -3883,6 +3885,8 @@ relative_read_next (cob_file *f, const int read_opts)
 					 || (read_opts & COB_READ_ADVANCING_LOCK))
 						goto next_record;
 					return COB_STATUS_52_DEAD_LOCK;
+				case ENOLCK:
+					return COB_STATUS_53_MAX_LOCKS;
 				default:
 					return COB_STATUS_30_PERMANENT_ERROR;
 				}
@@ -4116,6 +4120,8 @@ relative_rewrite (cob_file *f, const int opt)
 				return COB_STATUS_51_RECORD_LOCKED;
 			case EDEADLK:
 				return COB_STATUS_52_DEAD_LOCK;
+			case ENOLCK:
+				return COB_STATUS_53_MAX_LOCKS;
 			default:
 				return COB_STATUS_30_PERMANENT_ERROR;
 			}
@@ -4193,6 +4199,8 @@ relative_delete (cob_file *f)
 				return COB_STATUS_51_RECORD_LOCKED;
 			case EDEADLK:
 				return COB_STATUS_52_DEAD_LOCK;
+			case ENOLCK:
+				return COB_STATUS_53_MAX_LOCKS;
 			default:
 				return COB_STATUS_30_PERMANENT_ERROR;
 			}
@@ -4284,6 +4292,8 @@ fisretsts (const int default_status)
 		return COB_STATUS_51_RECORD_LOCKED;
 	case EDEADLK:
 		return COB_STATUS_52_DEAD_LOCK;
+	case ENOLCK:
+		return COB_STATUS_53_MAX_LOCKS;
 	case EFLOCKED:
 		return COB_STATUS_61_FILE_SHARING;
 	case ENOCURR:
